# EmbSettings

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: main.cpp
src/include/: EmbSettings.hpp  EmbSettings.impl  EmbSettings_impl.hpp  EmbSettings_macro.hpp
src/src/: EmbSettings.cpp  embsettings.cpp
tests/: CMakeLists.txt  tests.cpp
